--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@prismicio/client": "^5.1.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "4",
     "next": "12.0.7",
+    "next-slicezone": "^0.1.3",
+    "prismic-reactjs": "1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
