Atualizando arquivo de configuração

--- a/l-marcel.config.json
+++ b/l-marcel.config.json
@@ -1,6 +1,10 @@
 {
   "name": "Portfólio",
   "icon": "self",
+  "technologies": [
+    "Next.js",
+    "React.js"
+  ],
   "links": {
     "self": "",
     "figma": ""
