--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@prismicio/client": "^5.1.0",
+    "axios": "^0.24.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "4",
     "next": "12.0.7",
     "next-slicezone": "^0.1.3",
+    "prismic-dom": "^2.2.6",
     "prismic-reactjs": "1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.45.0",
+    "use-context-selector": "^1.3.9"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
