Melhorando lista repositórios e otimizando código

--- a/l-marcel.config.json
+++ b/l-marcel.config.json
@@ -7,8 +7,9 @@
     "HTML",
     "CSS"
   ],
+  "pinned": true,
   "links": {
-    "self": "",
+    "self": "https://l-marcel.vercel.app/",
     "figma": ""
   }
 }
