Alterando modal do repositório

--- a/l-marcel.config.json
+++ b/l-marcel.config.json
@@ -11,6 +11,6 @@
   "pinned": true,
   "links": {
     "self": "https://l-marcel.vercel.app/",
-    "figma": "#disabled"
+    "figma": "https://www.figma.com/file/K9BO7sV1UI3ZqcyxgQvWF2/Untitled?node-id=0%3A1"
   }
 }
