--- a/apps/projects/package.json
+++ b/apps/projects/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "next-start",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.5.4"
   }
 }
