--- a/apps/projects/package.json
+++ b/apps/projects/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-timer-hook": "^3.0.5",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
