--- a/l-marcel.config.json
+++ b/l-marcel.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "L-Marcel",
+  "name": "Old: L-Marcel",
   "technologies": [
     "Next.js",
     "React.js",
@@ -7,7 +7,6 @@
     "CSS",
     "SASS"
   ],
-  "pinned": true,
   "links": {
     "self": "https://l-marcel.vercel.app/",
     "figma": "https://www.figma.com/file/K9BO7sV1UI3ZqcyxgQvWF2/Untitled?node-id=0%3A1"
