--- a/l-marcel.config.json
+++ b/l-marcel.config.json
@@ -1,5 +1,6 @@
 {
   "name": "Old: L-Marcel",
+  "translatedDescription": "Aplicação desenvolvida em Next.js para unificar todas as minhas conquistas e informações relevantes em um único lugar. Um ponto de partida para o que almejo ser.",
   "technologies": [
     "Next.js",
     "React.js",
